syntax = "proto3";

option java_multiple_files = true;
option java_package = "me.stojan.pasbox.storage";

message SecretContainer {
  oneof iv {
    bytes aes_gcm_nopad_96 = 1;
  }

  bytes secret = 64;
}

message Secret {
  oneof iv {
    bytes aes_gcm_nopad_96 = 1;
  }

  bytes id = 16;
  bytes public = 17;
  bytes private = 18;
}

message SecretPublic {
  message Password {
    string title = 1;
    string website = 2;
    string user = 3;
  }

  bytes id = 1;
  uint64 created_at = 2;
  uint64 modified_at = 3;

  oneof private_hash {
    bytes sha256 = 16;
  }

  oneof private_signature {
    bytes secp256r1_sha256 = 32;
  }

  bool hidden = 64;

  oneof info {
    Password password = 96;
  }
}

message SecretPrivate {
  message Password {
    string password = 1;
  }

  bytes random_padding = 1;

  bytes id = 2;
  uint64 created_at = 3;

  oneof data {
    Password password = 64;
  }
}